# schema_validator

./: Cargo.toml  README.md
schema_validator_derive/: Cargo.toml
schema_validator_derive/src/: lib.rs
src/: derive.rs  error.rs  lib.rs
src/schema/: boolean.rs  clone.rs  literal.rs  mapping.rs  mod.rs  number.rs  object.rs  optional.rs  patterns.rs  string.rs
tests/: integration_tests.rs  literal.rs  mapping.rs  mod.rs  object.rs  optional.rs  string.rs
tests/coercion/: mod.rs
tests/common/: mod.rs
tests/error/: mod.rs
tests/transform/: mod.rs
tests/validation/: mod.rs
