[package]
name = "schema_validator"
version = "0.1.0"
edition = "2021"
authors = ["OpenHands <openhands@all-hands.dev>"]
description = "A schema-based data validation library"
license = "MIT"

[workspace]
members = ["schema_validator_derive"]

[dependencies]
thiserror = "1.0"
schema_validator_derive = { path = "./schema_validator_derive" }
serde_json = "1.0.135"
